infra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pharmacy-ingress
  namespace: default
spec:
  rules:
    - host: management.pharmacy.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: management-service
                port:
                  number: 80
    - host: pharmacy.pharmacy.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pharmacy-service
                port:
                  number: 81
